[package]
name = "rdf"
version = "0.1.0"
authors = ["mkasiulis"]
edition = "2021"

[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["abi3-py39"] }
rand ="*"
numpy = "*"
ndarray = {version = "*", features = ["rayon"]}
rayon = "*"
spade = '*'
rstar = '*'
ang = '*'
libm = '*'
geo = '*'
itertools = '*'