[package]
name = "rdf"
version = "0.1.0"
authors = ["mkasiulis"]
edition = "2024"

[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["abi3-py39"] } # Later gives warnings and soon deprecations
rand ="*"
numpy = "*"
ndarray = {version = "0.16.1", features = ["rayon"]} # Breaking version change for types beyond that
rayon = "*"
spade = '*'
rstar = '*'
ang = '*'
libm = '*'
geo = '*'
itertools = '*'